chore: setup color schemes

--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+// COLORS
+$clr-dark-void: #151419;
+$clr-liquid-lava: #f56e0f;
+$clr-gluon-gray: #1b1b1b;
+$clr-slate-gray: #262626;
+$clr-dusty-gray: #878787;
+$clr-snow: #fbfbfb;
+$clr-gray-smooth: #f4f4f4;
