--- a/apps/web/src/styles/_normalize.scss
+++ b/apps/web/src/styles/_normalize.scss
@@ -7,6 +7,8 @@
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
