--- a/apps/web/src/styles/_variables.scss
+++ b/apps/web/src/styles/_variables.scss
@@ -8,3 +8,17 @@ $clr-gray-smooth: #f4f4f4;
 
 $shadow-smooth: box-shadow(0px 4px 2px 0px rgba(0, 0, 0, 0.02));
 $shadow-smooth-dark: box-shadow(0px 4px 4px 0px rgba(0, 0, 0, 0.02));
+
+$font-body:
+  aileron,
+  system-ui,
+  -apple-system,
+  BlinkMacSystemFont,
+  'Segoe UI',
+  Roboto,
+  Oxygen,
+  Ubuntu,
+  Cantarell,
+  'Open Sans',
+  'Helvetica Neue',
+  sans-serif;
