style: added font family variable

--- a/apps/web/src/styles/_normalize.scss
+++ b/apps/web/src/styles/_normalize.scss
@@ -1,3 +1,5 @@
+@use './variables';
+
 *,
 *::before,
 *::after {
@@ -13,6 +15,7 @@ html {
 
 body {
   margin: 0;
+  font-family: variables.$font-body;
 }
 
 main {
@@ -81,6 +84,7 @@ button,
 [type='reset'],
 [type='submit'] {
   -webkit-appearance: button;
+  appearance: button;
 }
 
 button::-moz-focus-inner,
@@ -132,6 +136,7 @@ textarea {
 
 [type='search'] {
   -webkit-appearance: textfield;
+  appearance: textfield;
   outline-offset: -2px;
 }
 
