feat: sidebar dark mode

--- a/apps/web/src/app/core/components/sidebar/sidebar.component.html
+++ b/apps/web/src/app/core/components/sidebar/sidebar.component.html
@@ -17,119 +17,121 @@
     </a>
   </div>
 
-  <div class="menu-group">
-    <p class="menu-title">Menu</p>
-    <ul>
-      <li>
-        <a
-          routerLink="/"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-          class="menu-button"
-        >
-          <i class="bx bxs-compass"></i>
-          <span>Browse</span>
-        </a>
-      </li>
-      <li>
-        <a
-          routerLink="/feed/subscriptions"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-          class="menu-button"
-        >
-          <i class="bx bxs-group"></i>
-          <span>Subscriptions</span>
-        </a>
-      </li>
-    </ul>
-  </div>
-  <div class="menu-group">
-    <p class="menu-title">You</p>
-    <ul>
-      <li>
-        <a
-          routerLink="/u/watch-history"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-          class="menu-button"
-        >
-          <i class="bx bxs-stopwatch"></i>
-          <span>Watch History</span>
-        </a>
-      </li>
-      <li>
-        <a
-          routerLink="/u/subscribers"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-          class="menu-button"
-        >
-          <i class="bx bxs-group"></i>
-          <span>Subscribers</span>
-        </a>
-      </li>
-    </ul>
-  </div>
-  <div class="menu-group avatars">
-    <p class="menu-title">Subscriptions</p>
-    <ul>
-      <li>
-        <a
-          routerLink="/u/watch-history"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-          class="menu-button"
-        >
-          <img
-            class="avatar"
-            src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          />
-          <span>Joshua Morony</span>
-        </a>
-      </li>
-      <li>
-        <a
-          routerLink="/u/subscribers"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-          class="menu-button"
-        >
-          <img
-            class="avatar"
-            src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          />
-          <span>Joshua Morony</span>
-        </a>
-      </li>
-      <li>
-        <a
-          routerLink="/u/subscribers"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-          class="menu-button"
-        >
-          <img
-            class="avatar"
-            src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          />
-          <span>Joshua Morony</span>
-        </a>
-      </li>
-      <li>
-        <a
-          routerLink="/u/subscribers"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-          class="menu-button"
-        >
-          <img
-            class="avatar"
-            src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          />
-          <span>Joshua Morony</span>
-        </a>
-      </li>
-    </ul>
+  <div>
+    <div class="menu-group">
+      <p class="menu-title">Menu</p>
+      <ul>
+        <li>
+          <a
+            routerLink="/"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            class="menu-button"
+          >
+            <i class="bx bxs-compass"></i>
+            <span>Browse</span>
+          </a>
+        </li>
+        <li>
+          <a
+            routerLink="/feed/subscriptions"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            class="menu-button"
+          >
+            <i class="bx bxs-group"></i>
+            <span>Subscriptions</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="menu-group">
+      <p class="menu-title">You</p>
+      <ul>
+        <li>
+          <a
+            routerLink="/u/watch-history"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            class="menu-button"
+          >
+            <i class="bx bxs-stopwatch"></i>
+            <span>Watch History</span>
+          </a>
+        </li>
+        <li>
+          <a
+            routerLink="/u/subscribers"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            class="menu-button"
+          >
+            <i class="bx bxs-group"></i>
+            <span>Subscribers</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="menu-group subscriptions">
+      <p class="menu-title">Subscriptions</p>
+      <ul>
+        <li>
+          <a
+            routerLink="/u/watch-history"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            class="menu-button"
+          >
+            <img
+              class="avatar"
+              src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            />
+            <span>Joshua Morony</span>
+          </a>
+        </li>
+        <li>
+          <a
+            routerLink="/u/subscribers"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            class="menu-button"
+          >
+            <img
+              class="avatar"
+              src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            />
+            <span>Joshua Morony</span>
+          </a>
+        </li>
+        <li>
+          <a
+            routerLink="/u/subscribers"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            class="menu-button"
+          >
+            <img
+              class="avatar"
+              src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            />
+            <span>Joshua Morony</span>
+          </a>
+        </li>
+        <li>
+          <a
+            routerLink="/u/subscribers"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            class="menu-button"
+          >
+            <img
+              class="avatar"
+              src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            />
+            <span>Joshua Morony</span>
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
 </aside>
