--- a/apps/web/src/app/core/components/sidebar/sidebar.component.scss
+++ b/apps/web/src/app/core/components/sidebar/sidebar.component.scss
@@ -1,12 +1,49 @@
 @use '../../../../styles/variables';
 @use '../../../../styles/mixins';
 
+:host {
+  --sidebar-background: #{variables.$clr-gray-smooth};
+  --active-menu-btn-clr: #{variables.$clr-dark-void};
+  --sidebar-scrollbar-clr: #{variables.$clr-dusty-gray};
+}
+
+.dark {
+  :host {
+    --sidebar-background: #{variables.$clr-dark-void};
+    --active-menu-btn-clr: #{variables.$clr-snow};
+  }
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(variables.$clr-dusty-gray, 0.1);
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(variables.$clr-dusty-gray, 0.3);
+  border-radius: 4px;
+
+  &:hover{
+    background-color: rgba(variables.$clr-dusty-gray, 0.5);
+  }
+}
+
 aside {
-  background-color: variables.$clr-gray-smooth !important;
+  background-color: var(--sidebar-background);
   height: 100%;
+  @include mixins.flex-column;
 
   > div {
     padding: variables.$spacing-normal;
+
+    &:last-child {
+      flex-grow: 1;
+      overflow: auto;
+    }
 
     > .brand {
       @include mixins.flex-cv;
@@ -14,77 +51,81 @@ aside {
       font-size: 1.3rem;
       font-weight: variables.$fw-bold;
       text-decoration: none;
-      color: variables.$clr-dark-void;
+      color: inherit;
 
       > svg {
         width: 2.5rem;
       }
     }
 
-    &.menu-group {
-      color: variables.$clr-dusty-gray;
+    > div {
+      &.menu-group {
+        margin-bottom: variables.$spacing-lg;
 
-      > .menu-title {
-        text-transform: uppercase;
-        font-weight: variables.$fw-semibold;
-        margin-top: 0;
-        font-size: variables.$fs-xs;
-      }
+        > .menu-title {
+          text-transform: uppercase;
+          font-weight: variables.$fw-semibold;
+          margin-top: 0;
+          color: variables.$clr-dusty-gray;
+          font-size: variables.$fs-xs;
+        }
 
-      > ul {
-        font-weight: variables.$fw-bold;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: grid;
-        gap: variables.$spacing-sm;
-
-        .menu-button {
-          @include mixins.flex-cv;
-          border-radius: 0.25rem;
-          text-decoration: none;
+        > ul {
+          font-weight: variables.$fw-bold;
+          list-style: none;
+          padding: 0;
+          margin: 0;
+          display: grid;
           gap: variables.$spacing-sm;
-          color: inherit;
-          padding: calc(variables.$spacing-sm / 2);
-          transition: 150ms ease-in;
+          color: variables.$clr-dusty-gray;
 
-          > i {
-            font-size: variables.$fs-icon;
-            flex-shrink: 0;
-          }
-
-          &:hover {
-            color: variables.$clr-dark-void;
-          }
-
-          &.active {
-            color: variables.$clr-dark-void;
+          .menu-button {
+            @include mixins.flex-cv;
+            border-radius: 0.25rem;
+            text-decoration: none;
+            gap: variables.$spacing-sm;
+            color: inherit;
+            padding: calc(variables.$spacing-sm / 2);
+            transition: 150ms ease-in;
 
             > i {
-              color: variables.$clr-liquid-lava;
+              font-size: variables.$fs-icon;
+              flex-shrink: 0;
+            }
+
+            &:hover {
+              color: var(--active-menu-btn-clr);
+            }
+
+            &.active {
+              color: var(--active-menu-btn-clr);
+
+              > i {
+                color: variables.$clr-liquid-lava;
+              }
             }
           }
         }
-      }
 
-      &.avatars {
-        > ul {
-          font-weight: variables.$fw-semibold;
+        &.subscriptions {
+          > ul {
+            font-weight: variables.$fw-semibold;
+            color: inherit;
 
-          > li {
-            color: variables.$clr-dark-void;
-            font-size: variables.$fs-xs;
-            > a {
-              padding: calc(variables.$spacing-sm / 3);
+            > li {
+              font-size: variables.$fs-xs;
+              > a {
+                padding: calc(variables.$spacing-sm / 3);
+              }
             }
           }
-        }
 
-        .avatar {
-          width: variables.$fs-icon;
-          aspect-ratio: 1;
-          object-fit: cover;
-          border-radius: variables.$radius-rounded;
+          .avatar {
+            width: variables.$fs-icon;
+            aspect-ratio: 1;
+            object-fit: cover;
+            border-radius: variables.$radius-rounded;
+          }
         }
       }
     }
