style: authentication layout

--- a/apps/web/src/styles/_mixins.scss
+++ b/apps/web/src/styles/_mixins.scss
@@ -13,3 +13,8 @@
   display: flex;
   flex-direction: column;
 }
+
+@mixin even-columns($count) {
+  display: grid;
+  grid-template-columns: repeat($count, 1fr);
+}
