--- a/apps/web/src/app/auth/auth.component.html
+++ b/apps/web/src/app/auth/auth.component.html
@@ -1,1 +1,29 @@
-<p>auth works!</p>
+<main>
+  <section>
+    <div class="auth-container">
+      <div class="auth-header">
+        <a routerLink="" class="back-btn"
+          ><i class="bx bx-left-arrow-alt"></i> Back to home</a
+        >
+        <a routerLink="" class="brand">
+          <svg
+            width="58"
+            height="34"
+            viewBox="0 0 58 34"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M13.8564 10L27.7128 34H0L13.8564 10Z" fill="#F56F10" />
+            <path d="M43.8564 10L57.7128 34H30L43.8564 10Z" fill="#F56F10" />
+            <path d="M28.8564 24L42.7128 0H15L28.8564 24Z" fill="#F56F10" />
+          </svg>
+
+          <p>Void Video</p>
+        </a>
+      </div>
+      <div class="form-container">
+        <router-outlet />
+      </div>
+    </div>
+  </section>
+</main>
