style: signin and signup forms with dark mode

--- a/apps/web/src/app/auth/auth.component.scss
+++ b/apps/web/src/app/auth/auth.component.scss
@@ -3,8 +3,8 @@
 
 :host {
   --back-button-hover-clr: #{variables.$clr-dark-void};
-  --form-container-clr: #{variables.$clr-gray-smooth};
-  --background-clr: #{variables.$clr-snow};
+  --form-container-clr: #{variables.$clr-snow};
+  --background-clr: #{variables.$clr-gray-smooth};
 }
 
 .dark {
