--- a/apps/web/src/styles/_normalize.scss
+++ b/apps/web/src/styles/_normalize.scss
@@ -9,7 +9,7 @@
 :root {
   color-scheme: light;
   color: variables.$clr-dark-void;
-  
+
   &.dark {
     color-scheme: dark;
     color: variables.$clr-snow;
@@ -79,6 +79,11 @@ textarea {
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
+}
+
+:is(input, select, textarea)::placeholder {
+  color: variables.$clr-dusty-gray;
+  font-family: inherit;
 }
 
 button,
