--- a/apps/web/src/app/core/components/header/header.component.html
+++ b/apps/web/src/app/core/components/header/header.component.html
@@ -1,1 +1,22 @@
-<p>header works!</p>
+<header>
+  <div class="search-container">
+    <div class="search-box">
+      <input
+        type="text"
+        name="search"
+        autocomplete="off"
+        aria-autocomplete="list"
+        id="search"
+        placeholder="Search for users, videos and playlists"
+      />
+      <i class="bx bx-search sm"></i>
+    </div>
+    <button class="icon primary ghost">
+      <i class="bx bxs-microphone sm"></i>
+    </button>
+  </div>
+  <div class="user-actions">
+    <button class="primary">Sign In</button>
+    <button>Sign Up</button>
+  </div>
+</header>
