--- a/apps/web/src/app/core/core.component.scss
+++ b/apps/web/src/app/core/core.component.scss
@@ -4,7 +4,6 @@
 :host {
   display: flex;
   min-height: 100dvh;
-  gap: variables.$spacing-sm;
 
   > div {
     flex-grow: 1;
@@ -18,6 +17,8 @@
 
     > main {
       flex-grow: 1;
+      padding-inline: variables.$spacing-normal;
+      padding-bottom: variables.$spacing-normal;
     }
   }
 
