--- a/apps/web/src/app/auth/pages/sign-in/sign-in.component.html
+++ b/apps/web/src/app/auth/pages/sign-in/sign-in.component.html
@@ -1,26 +1,48 @@
 <h1 class="sr-only">Sign in to your account</h1>
 <p>Welcome Back!</p>
-<form>
+<form [formGroup]="loginForm" (ngSubmit)="login()">
   <div>
-    <label for="email-username" class="sr-only">Email or username</label>
+    <label for="email" class="sr-only">Email</label>
     <input
-      type="text"
-      name="email-username"
-      id="email-username"
-      placeholder="Email or username"
+      type="email"
+      formControlName="email"
+      id="email"
+      [attr.aria-invalid]="loginForm.get('email')?.errors"
+      [attr.aria-errormessage]="loginForm.get('email')?.errors && 'email-error'"
+      placeholder="Email address"
     />
+    @if (loginForm.get('email')?.touched && loginForm.get('email')?.errors) {
+      <div class="alert" id="email-error">
+        <i class="bx bxs-error"></i>
+        <span>
+          @if (loginForm.get('email')?.hasError('required')) {
+            Email is required.
+          } @else if (loginForm.get('email')?.hasError('email')) {
+            Email is not valid.
+          } @else {
+            {{ loginForm.get('email')?.getError('server')[1] }}
+          }
+        </span>
+      </div>
+    }
   </div>
   <div>
     <label for="password" class="sr-only">Password</label>
     <input
       type="password"
-      name="password"
+      formControlName="password"
       id="password"
       placeholder="Password"
     />
   </div>
   <div>
-    <button type="button" class="primary">Sign In</button>
+    <button [disabled]="loginForm.invalid" class="primary">Sign In</button>
     <p>Already have an account? <a routerLink="/auth/sign-up">Sign Up</a></p>
   </div>
 </form>
+@if (loginForm.hasError('server')) {
+  <div class="alert">
+    <i class="bx bxs-error"></i>
+    <span>{{ loginForm.getError('server')[1] }}</span>
+  </div>
+}
