--- a/apps/web/src/app/core/components/sidebar/sidebar.component.html
+++ b/apps/web/src/app/core/components/sidebar/sidebar.component.html
@@ -17,7 +17,7 @@
     </a>
   </div>
 
-  <div>
+  <div cdkMenu>
     <div class="menu-group">
       <p class="menu-title">Menu</p>
       <ul>
@@ -27,6 +27,7 @@
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
             class="menu-button"
+            cdkMenuItem
           >
             <i class="bx bxs-compass"></i>
             <span>Browse</span>
@@ -38,6 +39,7 @@
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
             class="menu-button"
+            cdkMenuItem
           >
             <i class="bx bxs-group"></i>
             <span>Subscriptions</span>
@@ -54,6 +56,7 @@
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
             class="menu-button"
+            cdkMenuItem
           >
             <i class="bx bxs-stopwatch"></i>
             <span>Watch History</span>
@@ -65,6 +68,7 @@
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
             class="menu-button"
+            cdkMenuItem
           >
             <i class="bx bxs-group"></i>
             <span>Subscribers</span>
@@ -81,6 +85,7 @@
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
             class="menu-button"
+            cdkMenuItem
           >
             <img
               class="avatar"
@@ -95,6 +100,7 @@
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
             class="menu-button"
+            cdkMenuItem
           >
             <img
               class="avatar"
@@ -109,6 +115,7 @@
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
             class="menu-button"
+            cdkMenuItem
           >
             <img
               class="avatar"
@@ -123,6 +130,7 @@
             routerLinkActive="active"
             ariaCurrentWhenActive="page"
             class="menu-button"
+            cdkMenuItem
           >
             <img
               class="avatar"
