chore: use button class to style button like elements

--- a/apps/web/src/app/auth/pages/sign-in/sign-in.component.html
+++ b/apps/web/src/app/auth/pages/sign-in/sign-in.component.html
@@ -29,7 +29,10 @@
     />
   </div>
   <div>
-    <button [disabled]="loginForm.invalid || isSubmitting" class="primary">
+    <button
+      [disabled]="loginForm.invalid || isSubmitting"
+      class="button primary"
+    >
       @if (isSubmitting) {
         <app-svg-loader />
       } @else {
