--- a/apps/web/src/app/auth/pages/sign-up/sign-up.component.html
+++ b/apps/web/src/app/auth/pages/sign-up/sign-up.component.html
@@ -104,7 +104,7 @@
     }
   </div>
   <div>
-    <button class="primary" [disabled]="form.invalid || isSubmitting">
+    <button class="button primary" [disabled]="form.invalid || isSubmitting">
       @if (isSubmitting) {
         <app-svg-loader />
       } @else {
