feat: cdk menu styles and user profile and appearance menu

--- a/apps/web/src/app/core/components/header/header.component.html
+++ b/apps/web/src/app/core/components/header/header.component.html
@@ -11,14 +11,14 @@
       />
       <i class="bx bx-search sm"></i>
     </div>
-    <button class="icon primary ghost">
+    <button class="button icon primary ghost">
       <i class="bx bxs-microphone sm"></i>
     </button>
   </div>
   <div class="user-actions">
     <ng-container>
       @if (session$ | async; as session) {
-        {{ session.displayName }}
+        <app-user-profile />
       } @else {
         <a routerLink="/auth" class="button primary">Sign In</a>
         <a routerLink="/auth/sign-up" class="button">Sign Up</a>
