--- a/apps/web/src/styles/_variables.scss
+++ b/apps/web/src/styles/_variables.scss
@@ -6,8 +6,8 @@ $clr-dusty-gray: #878787;
 $clr-snow: #fbfbfb;
 $clr-gray-smooth: #f4f4f4;
 
-$shadow-smooth: box-shadow(0px 4px 2px 0px rgba(0, 0, 0, 0.02));
-$shadow-smooth-dark: box-shadow(0px 4px 4px 0px rgba(0, 0, 0, 0.02));
+$shadow-smooth: 0px 4px 2px 0px rgba(0, 0, 0, 0.02);
+$shadow-smooth-dark: 0px 4px 4px 0px rgba(0, 0, 0, 0.02);
 
 $spacing-sm: 0.5rem;
 $spacing-normal: 1rem;
@@ -39,6 +39,7 @@ $breakpoint-lg: 1024px;
 $breakpoint-xl: 1280px;
 
 $fs-xs: 0.8rem;
+$fs-sm: 0.9rem;
 $fs-normal: 1rem;
 $fs-lg: 1.3rem;
 
@@ -46,3 +47,4 @@ $fs-icon: 1.75rem;
 $fs-icon-sm: 1.5rem;
 
 $radius-rounded: 1000px;
+$radius-round: 1rem;
