--- a/apps/web/src/app/shared/components/user-profile/user-profile.component.scss
+++ b/apps/web/src/app/shared/components/user-profile/user-profile.component.scss
@@ -1,5 +1,9 @@
 @use '../../../../styles/variables';
 
+#profile-menu:is(:hover, :active, :focus) {
+  border: none;
+}
+
 #profile-menu[aria-expanded='true'] {
   outline: 3px solid variables.$clr-slate-gray;
   outline-offset: 1px;
