style: remove border on active states

--- a/apps/web/src/app/shared/components/user-profile/user-profile.component.html
+++ b/apps/web/src/app/shared/components/user-profile/user-profile.component.html
@@ -2,7 +2,7 @@
   <button
     [cdkMenuTriggerFor]="profileMenu"
     id="profile-menu"
-    class="button icon"
+    class="button ghost icon"
   >
     <img
       class="avatar-image"
