chore: extracted profile menu header is separate component

--- a/apps/web/src/app/shared/components/profile-menu/profile-menu-header/profile-menu-header.component.scss
+++ b/apps/web/src/app/shared/components/profile-menu/profile-menu-header/profile-menu-header.component.scss
@@ -1,13 +1,4 @@
-@use '../../../../styles/variables';
-
-#profile-menu:is(:hover, :active, :focus) {
-  border: none;
-}
-
-#profile-menu[aria-expanded='true'] {
-  outline: 3px solid variables.$clr-slate-gray;
-  outline-offset: 1px;
-}
+@use '../../../../../styles/variables';
 
 .menu-header {
   display: grid;
@@ -39,8 +30,4 @@
       text-decoration: underline;
     }
   }
-}
-
-.avatar-image {
-  border-radius: variables.$radius-rounded;
 }
