--- a/apps/web/src/app/shared/components/profile-menu/user-profile/user-profile.component.html
+++ b/apps/web/src/app/shared/components/profile-menu/user-profile/user-profile.component.html
@@ -5,7 +5,7 @@
     class="button ghost icon"
   >
     <img
-      class="avatar-image"
+      class="avatar"
       [src]="session.avatar.secure_url"
       width="36"
       height="36"
@@ -15,22 +15,11 @@
 
   <ng-template #profileMenu>
     <div class="menu" cdkMenu>
-      <div class="menu-header">
-        <img
-          class="avatar-image"
-          [src]="session.avatar.secure_url"
-          width="40"
-          height="40"
-          [alt]="session.displayName"
-        />
-        <div class="avatar-details">
-          <p>{{ session.displayName }}</p>
-          <small>&#64;{{ session.username }}</small>
-          <a cdkMenuItem [routerLink]="['/c', session.username]"
-            >View Your Channel</a
-          >
-        </div>
-      </div>
+      <app-profile-menu-header
+        [avatar]="session.avatar.secure_url"
+        [displayName]="session.displayName"
+        [username]="session.username"
+      />
       <div class="menu-group">
         <a class="menu-item" cdkMenuItem>
           <i class="bx bxs-movie-play sm"></i>
