feat: logout feature

--- a/apps/web/src/app/shared/components/profile-menu/user-profile/user-profile.component.html
+++ b/apps/web/src/app/shared/components/profile-menu/user-profile/user-profile.component.html
@@ -38,10 +38,10 @@
         </div>
       </div>
       <div class="menu-group">
-        <a class="menu-item" cdkMenuItem>
+        <button class="menu-item" cdkMenuItem (click)="logout()">
           <i class="bx bxs-log-out sm"></i>
           Sign Out
-        </a>
+        </button>
       </div>
     </div>
   </ng-template>
