style: removed mess from sidebar and cdkmenu item width set to 100%

--- a/apps/web/src/styles/_cdk-menu.scss
+++ b/apps/web/src/styles/_cdk-menu.scss
@@ -32,7 +32,7 @@
   cursor: pointer;
   font-weight: variables.$fw-semibold;
   border: none;
-
+  width: 100%;
   user-select: none;
   min-width: 64px;
   line-height: 36px;
