style: added some spacing between elements

--- a/apps/web/src/app/core/components/header/header.component.scss
+++ b/apps/web/src/app/core/components/header/header.component.scss
@@ -13,6 +13,7 @@
 
 header {
   padding: variables.$spacing-normal;
+  gap: variables.$spacing-normal;
   @include mixins.flex-cv;
   justify-content: space-between;
 
